rust/crates/config/tests/it/snapshots/t24-synthetic.snap
---
source: crates/config/tests/it/sites.rs
expression: summary(&c)
---
content:
  drafts: false
  expired: false
  future: false
defaultLanguageInSubdir: false
environment: production
formats:
  - html
  - "404"
  - alias
  - amp
  - calendar
  - css
  - csv
  - gotmpl
  - json
  - markdown
  - robots
  - rss
  - sitemap
  - sitemapindex
  - webappmanifest
minifyOutput: false
multihost: false
security:
  inlineShortcodes: disabled
sites:
  - baseURL: "https://seeksnack.com/"
    cascade: 0
    code: en
    disableKinds: []
    lang: en
    mainSections: ~
    menus: 0
    name: English
    outputs:
      "404":
        - "404"
      home:
        - html
        - json
        - rss
      page:
        - html
      robotstxt:
        - robots
      section:
        - html
        - rss
      sitemap:
        - sitemap
      sitemapindex:
        - sitemapindex
      taxonomy:
        - html
        - rss
      term:
        - html
        - rss
    pagination:
      disableAliases: false
      pagerSize: 2
      path: page
    params: 0
    permalinks:
      page:
        posts: "/posts/:year/:month/:title"
      section: {}
      taxonomy: {}
      term:
        posts: "/posts/:year/:month/:title"
    taxonomies:
      - brand=brands
      - category=categories
      - company=companies
      - defaultcontentlanguage=en
      - tag=tags
    timeZone: UTC
    title: Oracle
    ugly: never
    urlPrefix: ""
    weight: 1
  - baseURL: "https://seeksnack.com/"
    cascade: 0
    code: th
    disableKinds: []
    lang: th
    mainSections: ~
    menus: 0
    name: ไทย
    outputs:
      "404":
        - "404"
      home:
        - html
        - json
        - rss
      page:
        - html
      robotstxt:
        - robots
      section:
        - html
        - rss
      sitemap:
        - sitemap
      sitemapindex:
        - sitemapindex
      taxonomy:
        - html
        - rss
      term:
        - html
        - rss
    pagination:
      disableAliases: false
      pagerSize: 2
      path: page
    params: 0
    permalinks:
      page:
        posts: "/posts/:year/:month/:title"
      section: {}
      taxonomy: {}
      term:
        posts: "/posts/:year/:month/:title"
    taxonomies:
      - brand=brands
      - category=categories
      - company=companies
      - defaultcontentlanguage=en
      - tag=tags
    timeZone: UTC
    title: Oracle
    ugly: never
    urlPrefix: th
    weight: 2
timeout: 60
